Implemented RegisterScreen skeleton

--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
 <resources>
     <string name="start_learning_now">Start Learning Now</string>
     <string name="take_your_first_step_towards_mastering_a_new_language_today">Take your first step towards mastering a new language today!</string>
+    <string name="register">Register</string>
+    <string name="bg_text_1">score strzelić achieve osiągnąć compete rywalizować equipment sprzęt</string>
+    <string name="bg_text_2">brand marka hire zatrudnić outfit strój encourage zachęcać blow wiać</string>
+    <string name="bg_text_3">donate ofiarować cover przykryć flood powódź increase zwiększać</string>
+    <string name="bg_text_4">shake potrząsać violently gwałtownie adventure przygoda cave jaskinia</string>
 </resources>
