--- a/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="go_back">Go back</string>
+    <string name="hide_password">Hide password</string>
+    <string name="show_password">Show password</string>
 </resources>
