--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="sign_in">Sign in</string>
     <string name="error_email_exists">A user with that email already exists.</string>
     <string name="registration_successful">Registration successful! You can log in now.</string>
+    <string name="login">Login</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="youre_logged_in">You\'re logged in.</string>
 </resources>
