--- a/word/presentation/src/main/res/values/strings.xml
+++ b/word/presentation/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="check">Check</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
+    <string name="summary">Summary</string>
+    <string name="you_have_repeated_words">You have repeated %d words.</string>
+    <string name="you_have_guessed_of_perfectly">You have guessed %d of %d perfectly.</string>
+    <string name="below_average">Below average</string>
+    <string name="average">Average</string>
+    <string name="above_average">Above average</string>
 </resources>
