--- a/shop/presentation/src/main/res/values/strings.xml
+++ b/shop/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="shop">Shop</string>
+    <string name="successfully_downloaded_a_new_set">Successfully downloaded a new set</string>
 </resources>
