Implemented functionality to download new Words from remote server and store them locally

--- a/shop/presentation/src/main/res/values/strings.xml
+++ b/shop/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="shop">Shop</string>
     <string name="successfully_downloaded_a_new_set">Successfully downloaded a new set</string>
+    <string name="downloading">Downloading…</string>
 </resources>
