--- a/user/presentation/src/main/res/values/strings.xml
+++ b/user/presentation/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="daily_streak">Daily streak</string>
     <string name="best_streak">Best streak</string>
     <string name="level">Level</string>
+    <string name="history">History</string>
+    <string name="stats">Stats</string>
 </resources>
