--- a/user/presentation/src/main/res/values/strings.xml
+++ b/user/presentation/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="daily">Daily</string>
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
+    <string name="weekly">Weekly</string>
 </resources>
