--- a/user/presentation/src/main/res/values/strings.xml
+++ b/user/presentation/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="weekly">Weekly</string>
+    <string name="nothing_to_display_play_now">Nothing to display, play now.</string>
 </resources>
