--- a/user/presentation/src/main/res/values/strings.xml
+++ b/user/presentation/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="daily_goal">Daily goal</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="profile_edited_successfully">Profile edited successfully!</string>
 </resources>
