Implemented polish localization in user module

--- a/user/presentation/src/main/res/values/strings.xml
+++ b/user/presentation/src/main/res/values/strings.xml
@@ -17,13 +17,13 @@
     <string name="nothing_to_display_play_now">Nothing to display, play now.</string>
     <string name="enter_new_username">Enter new username</string>
     <string name="username">Username</string>
-    <string name="email">Email</string>
+    <string name="email" translatable="false">Email</string>
     <string name="enter_new_daily_goal">Enter new daily goal</string>
     <string name="daily_goal">Daily goal</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="profile_edited_successfully">Profile edited successfully!</string>
     <string name="are_you_sure">Are you sure?</string>
-    <string name="you_are_trying_to_logout_all_data_that_wasn_t_sync_with_internet_can_be_lost">You are trying to logout. All data that wasn\'t sync with internet can be lost.</string>
+    <string name="you_are_trying_to_logout_all_data_that_wasn_t_sync_with_internet_can_be_lost">You are trying to logout. All data that wasn\'t sync with server can be lost.</string>
     <string name="you_have_logout_successfully">You have logout successfully!</string>
 </resources>
