--- a/user/presentation/src/main/res/values-pl/strings.xml
+++ b/user/presentation/src/main/res/values-pl/strings.xml
@@ -18,7 +18,7 @@
     <string name="enter_new_username">Wprowadź nową nazwę użytkownika</string>
     <string name="username">Nazwa użytkownika</string>
     <string name="enter_new_daily_goal">Wprowadź nowy cel dzienny</string>
-    <string name="daily_goal">Cel dzienny</string>
+    <string name="daily_goal">Dzienny cel</string>
     <string name="save">Zapisz</string>
     <string name="cancel">Anuluj</string>
     <string name="profile_edited_successfully">Edycja profilu zakończona sukcesem!</string>
