--- a/word/presentation/src/main/res/values/strings.xml
+++ b/word/presentation/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="average">Average</string>
     <string name="above_average">Above average</string>
     <string name="open_previous_words">Open previous words</string>
+    <string name="previous">Previous</string>
 </resources>
