--- a/user/presentation/src/main/res/values-pl/strings.xml
+++ b/user/presentation/src/main/res/values-pl/strings.xml
@@ -25,4 +25,8 @@
     <string name="are_you_sure">Czy jesteś pewien?</string>
     <string name="you_are_trying_to_logout_all_data_that_wasn_t_sync_with_internet_can_be_lost">Próbujesz się wylogować. Wszystkie dane, które nie zostały zsynchronizowane z serwerem, mogą zostać utracone.</string>
     <string name="you_have_logout_successfully">Wylogowanie zakończyło się powodzeniem!</string>
+    <string name="beginner">Początkujący</string>
+    <string name="intermediate">Średni</string>
+    <string name="advanced">Zaawansowany</string>
+    <string name="unknown">Nieznany</string>
 </resources>
