--- a/word/presentation/src/main/res/values-pl/strings.xml
+++ b/word/presentation/src/main/res/values-pl/strings.xml
@@ -19,4 +19,5 @@
     <string name="average">Średnio</string>
     <string name="above_average">Powyżej średniej</string>
     <string name="open_previous_words">Otwórz poprzednie słowa</string>
+    <string name="previous">Ostatnie</string>
 </resources>
